Update gradle to 7.3.1 for support Java 17.